[package]
name = "yajvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

classfile-parser = "0.3.7"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bitflags = "2.4.0"
